tests/baselines/reference/staticPropSuper.errors.txt
==== tests/cases/compiler/staticPropSuper.ts (3 errors) ====
    class A {
    }
    
    class B extends A {
        public static s: number = 9;
    
        constructor() {
            var x = 1; // should not error
            super();
        }
    }
    
    class C extends A {
        public p: number = 10;
    
        constructor() {
        ~~~~~~~~~~~
!!! staticPropSuper.ts(16,5): error TS2105: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }
    
    class D extends A {
        private p: number = 11;
    
        constructor() {
        ~~~~~~~~~~~
!!! staticPropSuper.ts(24,5): error TS2105: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }
    
    class E extends A {
        p: number = 12;
    
        constructor() {
        ~~~~~~~~~~~
!!! staticPropSuper.ts(32,5): error TS2105: Constructors for derived classes must contain a 'super' call.
            var x = 1; // should error
        }
    }